# oceantensor-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_api.py
app/: config.py  db.py  main.py  metrics.py
app/data/: farm_predictions.json  farms_geo.json  v13_predictions.json  v7_predictions.json
app/mcp/: __init__.py  audit_logger.py  context_filter.py  policy_engine.py  rate_limiter.py
app/models/: audit.py  dam.py  farm.py  feature.py  prediction.py  rag_document.py  sensor.py  weather.py
app/routers/: admin.py  explain.py  predict.py  rag.py  realdata.py  sensor.py  v7.py  ws.py
app/schemas/: prediction.py  sensor.py
data_pipeline/: feature_store.py
data_pipeline/collectors/: kma_collector.py  kma_hourly_collector.py  koem_collector.py  kwater_collector.py  (+2 more)
deploy/: .env.deploy.example  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  docker-compose.deploy.yml  nginx.conf  requirements-serve.txt
docs/: lessons.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
rag/: __init__.py  build_corpus.py  embedder.py  prompt_injector.py  rag_chain.py  vectorstore.py
scripts/: analyze_chl_nir.py  build_cube.py  build_from_parquet.py  collect_kosc.py  collect_only.py  deploy_and_build.py  ensemble_recall100_eval.py  export_label_samples.py  extract_v7_predictions.py  gen_dataset_docx.py  gen_handover_docx.py  init_extensions.sql  inspect_dataset.py  merge_cubes.py  monitor_training.py  patch_cmems_mld.py  permutation_importance.py  plot_history.py  train_real.py  train_synth.py
(+84 files in other folders)
