[project]
name = "seaweed-hwangbaek"
version = "0.1.0"
description = "Edge Tiny Transformer 기반 양식 김 황백화 조기 탐지 시스템"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "geoalchemy2>=0.15.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "google-generativeai>=0.8.0",
    "zarr>=2.18.0",
    "scipy>=1.14.0",
    "pyproj>=3.6.0",
    "scikit-learn>=1.5.0",
    "xarray>=2026.4.0",
    "netcdf4>=1.7.4",
    "pydap>=3.5.9",
    "matplotlib>=3.11.0",
    "pystac-client>=0.8.0",
    "rasterio>=1.3.0",
    "pyarrow>=24.0.0",
    "paramiko>=5.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "wandb>=0.19.0",
    "rich>=13.0.0",
    "python-docx>=1.2.0",
    "plotly>=6.8.0",
    "openpyxl>=3.1.5",
    "dbfread>=2.0.7",
    "pyshp>=3.0.13",
    "olefile>=0.47",
    "copernicusmarine>=2.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
